<resources>
    <string name="app_name">ComparApp</string>
    <string name="slogan">Los Mejores Precios En Un Solo Lugar</string>
    <string name="inicia_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="valores_nutricionales">Valores nutricionales (por 100g)</string>
    <string name="valor_energetico">Valor energético (kcal):</string>
    <string name="grasas">Grasas:</string>
    <string name="hidratos_de_carbono">Hidratos de carbono:</string>
    <string name="proteinas">Proteínas:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Contraseña</string>
    <string name="text1_register">EMPIEZA A LLENAR LA CESTA</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="login_title">CONTINÚA LLENANDO LA CESTA</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="login_question">¿No dispones de una cesta?</string>
    <string name="registrate"> <u>Regístrate</u></string>
    <string name="nombre">Nombre</string>
    <string name="register_question">¿Ya dispones de una cesta?</string>
    <string name="register_redirection"> <u>Inicia sesión</u></string>
    <string name="lacteos">LÁCTEOS</string>
    <string name="fruta">FRUTA</string>
    <string name="proteína">PROTEÍNA</string>
    <string name="aceite_y_grasas">GRASAS</string>
    <string name="azucar_y_dulces">AZÚCAR</string>
    <string name="procesados">PROCESADOS</string>
    <string name="verduras">VERDURAS</string>
    <string name="cereales">CEREALES</string>
    <string name="bebidas">BEBIDAS</string>
    <string name="producto_no_encontrado">No existen productos</string>
    <string name="cesta">Cesta</string>
    <string name="todos">TODOS</string>
</resources>