<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/background_landing_page">


            <TextView
                android:id="@+id/slogan"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="156dp"
                android:fontFamily="@font/robotoblack"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="@string/slogan"
                android:textColor="#FBB348"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/basketLandingPage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/basket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slogan"
                android:contentDescription="@string/cesta" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/LoginButtonLandingPage"
                style="@style/ButtonStyle"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:text="@string/inicia_sesion"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basketLandingPage"
                app:layout_constraintVertical_bias="0.173"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/RegisterButtonLandingPage"
                style="@style/ButtonStyle"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button"
                android:text="@string/registrarse"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginButtonLandingPage"
                tools:ignore="TouchTargetSizeCheck" />



        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>